# kursovaya2025db

./: .gitignore  README.md  docker-compose.yml
backend-fastapi/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  start.sh
backend-fastapi/app/: config.py  db.py  main.py
backend-fastapi/app/api/: health.py  orders.py  production.py  products.py  quality.py  reports.py  supplies.py
backend-fastapi/src/controllers/: database.py
backend-fastapi/src/dependencies/: get_current_user.py  has_role.py  require_auth.py
backend-fastapi/src/middleware/: rate_limit.py
backend-fastapi/src/routes/: admin.py  auth.py  authorized.py  public.py  worker.py
backend-fastapi/src/schemas/: admin.py  auth.py  authorized.py  public.py  worker.py
backend-fastapi/src/services/: admin.py  auth.py  authorized.py  public.py  worker.py
backend-fastapi/src/utils/: crypto.py
db-postgresql/: .env.example  README.md  docker-compose.yml  migrate.sh
db-postgresql/init/: 01_privileges.sql  roles.sql
db-postgresql/migrations/: functions.sql  procedures_extra.sql  seed.sql  shop_functions.sql  shop_seed.sql  shop_tables.sql  shop_triggers.sql  shop_views.sql  tables.sql  triggers.sql  views.sql
db-postgresql/sql/: run_all.sql
db-postgresql/triggers/: check_inspector_role.sql  set_batch_best_before.sql  set_order_item_unit_price.sql  shop_set_order_item_unit_price.sql  update_batch_status_on_quality.sql
db-postgresql/views/: create_batches_quality_view.sql  (+7 more)
frontend-vite-ts/: index.html  package-lock.json  package.json  tsconfig.app.json
(+51 files in other folders)
