[tool.poetry]
name = "cheese-backend"
version = "0.1.0"
description = "Cheese IS backend (FastAPI + Postgres stored logic)"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic-settings = "^2.4.0"
psycopg = {version = "^3.2.0", extras = ["binary"]}
psycopg-pool = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
