[tool.poetry]
name = "cheese-backend"
version = "0.1.0"
description = "Cheese IS backend (FastAPI + Postgres stored logic)"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = "^2.4.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
psycopg-pool = "^3.2.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
